[package]
authors = ["Jet Li <jing.i.qin@icloud.com>"]
categories = ["wasm"]
description = "Exemplary real world app built with Rust + Yew + WebAssembly."
edition = "2018"
license = "Apache-2.0/MIT"
name = "conduit-wasm"
repository = "https://github.com/jetli/rust-yew-realworld-example-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.11.0"
pulldown-cmark = "0.7.2"
serde = "1.0.114"
serde_json = "1.0.56"
thiserror = "1"
yew = "0.17.2"
yew-router = { version="0.14.0", features = ["web_sys"] }
wasm-bindgen = "0.2.64"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

[dev-dependencies]
js-sys = "0.3.41"
wasm-bindgen-futures = "0.4.14"
wasm-bindgen-test = "0.3.14"
