[package]
name = "conduit-webview"
version = "0.1.0"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
rust-embed = { version = "5.5.1", features = ["interpolate-folder-path"] }
tokio = { version = "0.2", features = ["full"] }
web-view = "0.6.3"
